option('driverdir', type : 'string', description : 'drivers path')
option('with_x11', type : 'feature', value : 'auto')
option('with_glx', type : 'feature', value : 'auto')
option('with_wayland', type : 'feature', value : 'auto')
option('with_win32', type : 'feature', value : 'auto')
option('with_legacy', type : 'array', choices : ['emdg', 'nvctrl', 'fglrx'], value : [])
option('enable_docs', type : 'boolean', value : false)
