#  @COPYRIGHT@ Intel Confidential - Unreleased Software

dummy_drv_video_la_LTLIBRARIES = dummy_drv_video.la
dummy_drv_video_ladir = $(libdir)
dummy_drv_video_la_LDFLAGS = -no-undefined -module
dummy_drv_video_la_LIBADD = 

AM_CFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/../../include/external/ -I$(top_srcdir)/../../include/kmd
dummy_drv_video_la_SOURCES = dummy_drv_video.c object_heap.c

